Fix some broke css classes and remove the idealistic second space at the end of every sentence.

--- a/brilliant-ideas.html
+++ b/brilliant-ideas.html
@@ -8,8 +8,8 @@
 		p.black { font-family: 'Arial'; color:black }
 		h1.yellow { font-family: 'Arial'; color:yellow }
 		h2 { font-family: 'Arial'; color:black }
-		h3.1 { font-family: 'Arial'; color:blue; background:white }
-		h3.2 { font-family: 'Arial'; color:red; background:white }
+		h3.a1 { font-family: 'Arial'; color:blue; background:white }
+		h3.a2 { font-family: 'Arial'; color:red; background:white }
 		h6.warn { font-family: Arial; color:red; background:white }
 		td.menu { border-width: thick; border-color:#00ff00; border-style:outset }
 		td.menu { font-family: 'Arial'; font-size:10pt; font-weight:bold; text-align:center; color:yellow; background:black }
@@ -55,33 +55,33 @@
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Virus Cure For Cancer</h3>
+			<h3 class="a1">Virus Cure For Cancer</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Maybe it will work, maybe it can't, I don't know, I'm just putting it out there.&nbsp; A virus is specialized at killing cells.&nbsp; The protein coating of a virus tells the virus what kind of cells to go after and infect.&nbsp; If the coating could be changed so that a virus could attack a specific type of cancer cell then a patient could get an injection similar to a flu shot that would destroy only the cancer and leave the healthy cells.
+			Maybe it will work, maybe it can't, I don't know, I'm just putting it out there. A virus is specialized at killing cells. The protein coating of a virus tells the virus what kind of cells to go after and infect. If the coating could be changed so that a virus could attack a specific type of cancer cell then a patient could get an injection similar to a flu shot that would destroy only the cancer and leave the healthy cells.
 			<hr><br>
 		</td>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>S'mores Brownies</h3>
+			<h3 class="a1">S'mores Brownies</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			You get some brownie mix, throw in some mini marshmallows and some Golden Grahams cereal, bake and enjoy.&nbsp; I've never actually tried it, so this may not be brilliant in practive, but it seems like a good idea.
+			You get some brownie mix, throw in some mini marshmallows and some Golden Grahams cereal, bake and enjoy. I've never actually tried it, so this may not be brilliant in practive, but it seems like a good idea.
 			<hr><br>
 		</td>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Car Dealership</h3>
+			<h3 class="a1">Car Dealership</h3>
 		</td>
 	</tr>
 	<tr>
@@ -94,59 +94,59 @@
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Exercise Chair 3000</h3>
+			<h3 class="a1">Exercise Chair 3000</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			The only exercise chair that lets you sit until you lose weight.&nbsp; Only $800 plus S&amp;H.&nbsp; Order today.
+			The only exercise chair that lets you sit until you lose weight. Only $800 plus S&amp;H. Order today.
 			<hr><br>
 		</td>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Deer Fences Along Highways</h3>
+			<h3 class="a1">Deer Fences Along Highways</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Far from a great idea.&nbsp; Sure they could save lives, but who wants to look at one long fence while they drive?&nbsp; And I certainly don't want to pay for it either.&nbsp; Might as well just go all the way and cage all the deer.
+			Far from a great idea. Sure they could save lives, but who wants to look at one long fence while they drive? And I certainly don't want to pay for it either. Might as well just go all the way and cage all the deer.
 			<hr><br>
 		</td>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Online Grovery Shopping</h3>
+			<h3 class="a1">Online Grovery Shopping</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			It would habe to be run locally, and be more like pizza delivery, but the orders would come in over the internet rather than by phone.&nbsp; The site would list the most commonly requested items to allow for easy ordering and the people taking the orders would then go to the store, pick up the items and deliver them for a small fee.
+			It would habe to be run locally, and be more like pizza delivery, but the orders would come in over the internet rather than by phone. The site would list the most commonly requested items to allow for easy ordering and the people taking the orders would then go to the store, pick up the items and deliver them for a small fee.
 			<hr><br>
 		</td>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Gift-Ideas.com</h3>
+			<h3 class="a1">Gift-Ideas.com</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			A site where you could go and fill out a profile on the person you're shopping for and then receive a list of ideas of what to but the person.&nbsp; The site could be paid for by the stores that the ideas would come from.
+			A site where you could go and fill out a profile on the person you're shopping for and then receive a list of ideas of what to but the person. The site could be paid for by the stores that the ideas would come from.
 			<hr><br>
 		</td>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>The Secret To Life</h3>
+			<h3 class="a1">The Secret To Life</h3>
 		</td>
 	</tr>
 	<tr>
@@ -159,13 +159,13 @@
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Fish Shampooer</h3>
+			<h3 class="a1">Fish Shampooer</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Because they can't all be good ideas.&nbsp; Quite possibly the worst idea I've ever come up with.&nbsp; Even if you got a free one in the mail, what would you do with it?&nbsp; I mean really, when's the last time you needed to shampoo a fish?&nbsp; And then where would you find fish shampoo to use in the fish shampooer?
+			Because they can't all be good ideas. Quite possibly the worst idea I've ever come up with. Even if you got a free one in the mail, what would you do with it? I mean really, when's the last time you needed to shampoo a fish? And then where would you find fish shampoo to use in the fish shampooer?
 			<hr><br>
 		</td>
 	</tr>
@@ -193,15 +193,15 @@
 							<img src="./images/cor_l.gif" width=10 height=120><br>
 						</td>
 						<td>
-						    <font size="1">This site is best viewed in 1024x768 resolution or higher.&nbsp; All content on this site is <font color="#008000">my</font> intellectual 
-						    property and may not be used without <font color="#008000">my</font> permission.&nbsp; <font color="#ff0000">CrazyBoy</font> and 
-						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously.&nbsp; No animals or 
-						    aliens were harmed during the making of the site.&nbsp; If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
-						    refund.&nbsp; I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
-						    engaged in the act of blinking.&nbsp; If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
-						    while you are here.&nbsp; You might want to look behind you right now to make sure no one is trying to sneak up on you.&nbsp; Even though snacking during 
-						    your viewing of this site could cause you to become overweight, it will also make you happy.&nbsp; Did you ever notice how clouds sometimes look like 
-						    other things?&nbsp; Okay, I'm done now.<br></font>
+						    <font size="1">This site is best viewed in 1024x768 resolution or higher. All content on this site is <font color="#008000">my</font> intellectual 
+						    property and may not be used without <font color="#008000">my</font> permission. <font color="#ff0000">CrazyBoy</font> and 
+						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously. No animals or 
+						    aliens were harmed during the making of the site. If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
+						    refund. I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
+						    engaged in the act of blinking. If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
+						    while you are here. You might want to look behind you right now to make sure no one is trying to sneak up on you. Even though snacking during 
+						    your viewing of this site could cause you to become overweight, it will also make you happy. Did you ever notice how clouds sometimes look like 
+						    other things? Okay, I'm done now.<br></font>
 			    		</td>
 			    		<td>
 			    			<img src="./images/cor_r.gif" width=10 height=120><br>
