--- a/ramblings.html
+++ b/ramblings.html
@@ -8,8 +8,8 @@
 		p.black { font-family: 'Arial'; color:black }
 		h1.yellow { font-family: 'Arial'; color:yellow }
 		h2 { font-family: 'Arial'; color:black }
-		h3.1 { font-family: 'Arial'; color:blue; background:white }
-		h3.2 { font-family: 'Arial'; color:red; background:white }
+		h3.a1 { font-family: 'Arial'; color:blue; background:white }
+		h3.a2 { font-family: 'Arial'; color:red; background:white }
 		h6.warn { font-family: Arial; color:red; background:white }
 		td.menu { border-width: thick; border-color:#00ff00; border-style:outset }
 		td.menu { font-family: 'Arial'; font-size:10pt; font-weight:bold; text-align:center; color:yellow; background:black }
@@ -52,7 +52,7 @@
 		
 	<tr>
 		<td colspan="2">
-			<h3 class=1>
+			<h3 class="a1">
 				7/15/2002
 			</h3>
 		</td>
@@ -60,14 +60,14 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Saw Reign of Fire a day or two ago.&nbsp; I've decided it is neither a good nor a bad movie, but it is most certainly a movie.&nbsp; Starburst may have created the worlds greatest commercial.&nbsp; Its the one where a girl on a couch unwraps a Starburst in her mouth.&nbsp; Going to the dentist today.&nbsp; I'm over 48 hours into Tactics Ogre, it's taking forever to beat.&nbsp; Meanwhile, Neverwinter Nights is going unplayed and Eternal Darkness and Warcraft 3 are unpurchased.
-			<p>&nbsp;</p>
+			Saw Reign of Fire a day or two ago. I've decided it is neither a good nor a bad movie, but it is most certainly a movie. Starburst may have created the worlds greatest commercial. Its the one where a girl on a couch unwraps a Starburst in her mouth. Going to the dentist today. I'm over 48 hours into Tactics Ogre, it's taking forever to beat. Meanwhile, Neverwinter Nights is going unplayed and Eternal Darkness and Warcraft 3 are unpurchased.
+			<p></p>
 		</td>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>
+			<h3 class="a1">
 				7/23/2002
 			</h3>
 		</td>
@@ -75,14 +75,14 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			I remain cavity-free.&nbsp; Got Eternal Darkness.&nbsp; I have a feeling that I will never beat the game as I barely made it through the first level.&nbsp; I suck at video games.&nbsp; And yet I own over a hundred of them (including computer games and ROMs.)&nbsp; I'm also eagerly awaiting the upcoming release of Mario Sunshine and am very jealous of the Japanese people who are playing the game right now.&nbsp; Austin Powers opens Friday, the newest commercial seems to be the funniest one so far.&nbsp; Hopefully I don't have to work Friday so I can see it opening day.
-			<p>&nbsp;</p>
+			I remain cavity-free. Got Eternal Darkness. I have a feeling that I will never beat the game as I barely made it through the first level. I suck at video games. And yet I own over a hundred of them (including computer games and ROMs.) I'm also eagerly awaiting the upcoming release of Mario Sunshine and am very jealous of the Japanese people who are playing the game right now. Austin Powers opens Friday, the newest commercial seems to be the funniest one so far. Hopefully I don't have to work Friday so I can see it opening day.
+			<p></p>
 		</td>
 	</tr>
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>
+			<h3 class="a1">
 				7/26/2002
 			</h3>
 		</td>
@@ -90,8 +90,8 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Saw Austin Powers.&nbsp; It drags in a few spots and gets a little weird at the end, but overall it is very funny and definitely worth seeing.&nbsp; Came home to a black out.&nbsp; Fortunately my glow-in-the-dark Gameboy had charged batteries so I was able to play Tactics Ogre until the power came on an hour later.
-			<p>&nbsp;</p>
+			Saw Austin Powers. It drags in a few spots and gets a little weird at the end, but overall it is very funny and definitely worth seeing. Came home to a black out. Fortunately my glow-in-the-dark Gameboy had charged batteries so I was able to play Tactics Ogre until the power came on an hour later.
+			<p></p>
 		</td>
 	</tr>
 	
@@ -118,15 +118,15 @@
 							<img src="./images/cor_l.gif" width=10 height=120><br>
 						</td>
 						<td>
-						    <font size="1">This site is best viewed in 1024x768 resolution or higher.&nbsp; All content on this site is <font color="#008000">my</font> intellectual 
-						    property and may not be used without <font color="#008000">my</font> permission.&nbsp; <font color="#ff0000">CrazyBoy</font> and 
-						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously.&nbsp; No animals or 
-						    aliens were harmed during the making of the site.&nbsp; If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
-						    refund.&nbsp; I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
-						    engaged in the act of blinking.&nbsp; If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
-						    while you are here.&nbsp; You might want to look behind you right now to make sure no one is trying to sneak up on you.&nbsp; Even though snacking during 
-						    your viewing of this site could cause you to become overweight, it will also make you happy.&nbsp; Did you ever notice how clouds sometimes look like 
-						    other things?&nbsp; Okay, I'm done now.<br></font>
+						    <font size="1">This site is best viewed in 1024x768 resolution or higher. All content on this site is <font color="#008000">my</font> intellectual 
+						    property and may not be used without <font color="#008000">my</font> permission. <font color="#ff0000">CrazyBoy</font> and 
+						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously. No animals or 
+						    aliens were harmed during the making of the site. If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
+						    refund. I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
+						    engaged in the act of blinking. If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
+						    while you are here. You might want to look behind you right now to make sure no one is trying to sneak up on you. Even though snacking during 
+						    your viewing of this site could cause you to become overweight, it will also make you happy. Did you ever notice how clouds sometimes look like 
+						    other things? Okay, I'm done now.<br></font>
 			    		</td>
 			    		<td>
 			    			<img src="./images/cor_r.gif" width=10 height=120><br>
