--- a/comics.html
+++ b/comics.html
@@ -8,8 +8,8 @@
 		p.black { font-family: 'Arial'; color:black }
 		h1.yellow { font-family: 'Arial'; color:yellow }
 		h2 { font-family: 'Arial'; color:black }
-		h3.1 { font-family: 'Arial'; color:blue; background:white }
-		h3.2 { font-family: 'Arial'; color:red; background:white }
+		h3.a1 { font-family: 'Arial'; color:blue; background:white }
+		h3.a2 { font-family: 'Arial'; color:red; background:white }
 		h6.warn { font-family: Arial; color:red; background:white }
 		td.menu { border-width: thick; border-color:#00ff00; border-style:outset }
 		td.menu { font-family: 'Arial'; font-size:10pt; font-weight:bold; text-align:center; color:yellow; background:black }
@@ -60,13 +60,13 @@
 				</tr>
 				<tr>
 					<td width="334" valign=top>
-						I won't stand for any independent thinking in this room.&nbsp; If you're not thinking like me, you're not thinking.
+						I won't stand for any independent thinking in this room. If you're not thinking like me, you're not thinking.
 					</td>
 					<td width="148" valign=top>
 						I have a question.
 					</td>
 					<td colspan="2" width="311" valign=top>
-						Well, that's not right.&nbsp; You should consider not having a question.
+						Well, that's not right. You should consider not having a question.
 					</td>
 				</tr>
 				<tr>
@@ -79,7 +79,7 @@
 				</tr>
 				<tr>
 					<td width="334" valign=top>
-						Who wants to touch my briefcase?&nbsp; Come on people.
+						Who wants to touch my briefcase? Come on people.
 					</td>
 					<td width="148" valign=top>
 						Wait, wait, wait...
@@ -110,7 +110,7 @@
 						Wait here, I'm going out in the hall to praise myself.
 					</td>
 					<td width="154" valign=top>
-						These were all based on an actual teacher who said these things.&nbsp; Some of the words may have changed slightly because they are not in context, but the meaning is the same.
+						These were all based on an actual teacher who said these things. Some of the words may have changed slightly because they are not in context, but the meaning is the same.
 					</td>
 				</tr>
 			</table>
@@ -140,15 +140,15 @@
 							<img src="./images/cor_l.gif" width=10 height=120><br>
 						</td>
 						<td>
-						    <font size="1">This site is best viewed in 1024x768 resolution or higher.&nbsp; All content on this site is <font color="#008000">my</font> intellectual 
-						    property and may not be used without <font color="#008000">my</font> permission.&nbsp; <font color="#ff0000">CrazyBoy</font> and 
-						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously.&nbsp; No animals or 
-						    aliens were harmed during the making of the site.&nbsp; If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
-						    refund.&nbsp; I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
-						    engaged in the act of blinking.&nbsp; If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
-						    while you are here.&nbsp; You might want to look behind you right now to make sure no one is trying to sneak up on you.&nbsp; Even though snacking during 
-						    your viewing of this site could cause you to become overweight, it will also make you happy.&nbsp; Did you ever notice how clouds sometimes look like 
-						    other things?&nbsp; Okay, I'm done now.<br></font>
+						    <font size="1">This site is best viewed in 1024x768 resolution or higher. All content on this site is <font color="#008000">my</font> intellectual 
+						    property and may not be used without <font color="#008000">my</font> permission. <font color="#ff0000">CrazyBoy</font> and 
+						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously. No animals or 
+						    aliens were harmed during the making of the site. If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
+						    refund. I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
+						    engaged in the act of blinking. If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
+						    while you are here. You might want to look behind you right now to make sure no one is trying to sneak up on you. Even though snacking during 
+						    your viewing of this site could cause you to become overweight, it will also make you happy. Did you ever notice how clouds sometimes look like 
+						    other things? Okay, I'm done now.<br></font>
 			    		</td>
 			    		<td>
 			    			<img src="./images/cor_r.gif" width=10 height=120><br>
