--- a/game.html
+++ b/game.html
@@ -8,8 +8,8 @@
 		p.black { font-family: 'Arial'; color:black }
 		h1.yellow { font-family: 'Arial'; color:yellow }
 		h2 { font-family: 'Arial'; color:black }
-		h3.1 { font-family: 'Arial'; color:blue; background:white }
-		h3.2 { font-family: 'Arial'; color:red; background:white }
+		h3.a1 { font-family: 'Arial'; color:blue; background:white }
+		h3.a2 { font-family: 'Arial'; color:red; background:white }
 		h6.warn { font-family: Arial; color:red; background:white }
 		td.menu { border-width: thick; border-color:#00ff00; border-style:outset }
 		td.menu { font-family: 'Arial'; font-size:10pt; font-weight:bold; text-align:center; color:yellow; background:black }
@@ -61,7 +61,7 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			The name of my game is Terrakon which is also the name of the world the game takes place on.&nbsp; I decided the name means &quot;with Earth&quot; even though I made it up.
+			The name of my game is Terrakon which is also the name of the world the game takes place on. I decided the name means &quot;with Earth&quot; even though I made it up.
 			<hr><br>
 		</td>
 	</tr>
@@ -74,7 +74,7 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			<img src="pixels/graf02.bmp">Graf - Just a simple boy who's parents are killed by Garblins (Garblins are like goblins).&nbsp; Fights with a staff. <p><img src="pixels/marci02.bmp">Marci - Decides to follow Graf on his quest, but refuses to say why.&nbsp; Fights with a knife.</p> <p><img src="pixels/rianol02.bmp">Rianol - An Elf who is assigned by his people to protect Graf and Marsi from harm.&nbsp; Fights with bow and arrows.</p> <p><img src="pixels/kyndle02.bmp">Kyndle - An accidental creation of the Lizard Wizard.&nbsp; Fights with a sword.</p>
+			<img src="pixels/graf02.bmp">Graf - Just a simple boy who's parents are killed by Garblins (Garblins are like goblins). Fights with a staff. <p><img src="pixels/marci02.bmp">Marci - Decides to follow Graf on his quest, but refuses to say why. Fights with a knife.</p> <p><img src="pixels/rianol02.bmp">Rianol - An Elf who is assigned by his people to protect Graf and Marsi from harm. Fights with bow and arrows.</p> <p><img src="pixels/kyndle02.bmp">Kyndle - An accidental creation of the Lizard Wizard. Fights with a sword.</p>
 			<hr><br>
 		</td>
 	</tr>
@@ -100,7 +100,7 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			I still have some details to add, but its mostly all here (see below).&nbsp; Sorry about the lack of detail, but the full size map is a 9MB jpg.<br><img src="images/overmapsmall.jpg">
+			I still have some details to add, but its mostly all here (see below). Sorry about the lack of detail, but the full size map is a 9MB jpg.<br><img src="images/overmapsmall.jpg">
 			<hr><br>
 		</td>
 	</tr>
@@ -128,15 +128,15 @@
 							<img src="./images/cor_l.gif" width=10 height=120><br>
 						</td>
 						<td>
-						    <font size="1">This site is best viewed in 1024x768 resolution or higher.&nbsp; All content on this site is <font color="#008000">my</font> intellectual 
-						    property and may not be used without <font color="#008000">my</font> permission.&nbsp; <font color="#ff0000">CrazyBoy</font> and 
-						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously.&nbsp; No animals or 
-						    aliens were harmed during the making of the site.&nbsp; If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
-						    refund.&nbsp; I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
-						    engaged in the act of blinking.&nbsp; If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
-						    while you are here.&nbsp; You might want to look behind you right now to make sure no one is trying to sneak up on you.&nbsp; Even though snacking during 
-						    your viewing of this site could cause you to become overweight, it will also make you happy.&nbsp; Did you ever notice how clouds sometimes look like 
-						    other things?&nbsp; Okay, I'm done now.<br></font>
+						    <font size="1">This site is best viewed in 1024x768 resolution or higher. All content on this site is <font color="#008000">my</font> intellectual 
+						    property and may not be used without <font color="#008000">my</font> permission. <font color="#ff0000">CrazyBoy</font> and 
+						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously. No animals or 
+						    aliens were harmed during the making of the site. If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
+						    refund. I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
+						    engaged in the act of blinking. If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
+						    while you are here. You might want to look behind you right now to make sure no one is trying to sneak up on you. Even though snacking during 
+						    your viewing of this site could cause you to become overweight, it will also make you happy. Did you ever notice how clouds sometimes look like 
+						    other things? Okay, I'm done now.<br></font>
 			    		</td>
 			    		<td>
 			    			<img src="./images/cor_r.gif" width=10 height=120><br>
