--- a/i-show.html
+++ b/i-show.html
@@ -8,8 +8,8 @@
 		p.black { font-family: 'Arial'; color:black }
 		h1.yellow { font-family: 'Arial'; color:yellow }
 		h2 { font-family: 'Arial'; color:black }
-		h3.1 { font-family: 'Arial'; color:blue; background:white }
-		h3.2 { font-family: 'Arial'; color:red; background:white }
+		h3.a1 { font-family: 'Arial'; color:blue; background:white }
+		h3.a2 { font-family: 'Arial'; color:red; background:white }
 		h6.warn { font-family: Arial; color:red; background:white }
 		td.menu { border-width: thick; border-color:#00ff00; border-style:outset }
 		td.menu { font-family: 'Arial'; font-size:10pt; font-weight:bold; text-align:center; color:yellow; background:black }
@@ -61,7 +61,7 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			I had this idea for a show.&nbsp; Something new, different, and exactly what you've seen before.&nbsp; It's supposed to be like a late night talk show without the guests (because who is going to come to Michigan to be on some crappy internet show?)&nbsp; So I do some comedy bits for about twenty minutes a few times a week and see if I can get a cult following...&nbsp; AND THEN I TAKE OVER THE WORLD!!!&nbsp; (Insert evil laugh here.)&nbsp; I'm currently still in the development stages of the show.&nbsp; I'm trying to get enough material for a few weeks worth of shows and I still need a decent video camera.&nbsp; Plus, I'll need better internet hosting.
+			I had this idea for a show. Something new, different, and exactly what you've seen before. It's supposed to be like a late night talk show without the guests (because who is going to come to Michigan to be on some crappy internet show?) So I do some comedy bits for about twenty minutes a few times a week and see if I can get a cult following... AND THEN I TAKE OVER THE WORLD!!! (Insert evil laugh here.) I'm currently still in the development stages of the show. I'm trying to get enough material for a few weeks worth of shows and I still need a decent video camera. Plus, I'll need better internet hosting.
 			<hr><br>
 		</td>
 	</tr>
@@ -74,7 +74,7 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			The creator, writer, director, and host of the i-Show, <font color="#008000"> Blaise</font> does it all.&nbsp; Why?&nbsp; For you.&nbsp; Because he cares.
+			The creator, writer, director, and host of the i-Show, <font color="#008000"> Blaise</font> does it all. Why? For you. Because he cares.
 			<hr><br>
 		</td>
 	</tr>
@@ -87,7 +87,7 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			<font color="#FF00FF">Eddie da Pig</font> gives us the word of the day.&nbsp; Unfortunately, Eddie is not a talking pig so the word of the day is &quot;OINK!&quot;<p><img src="images/eddiedapig.gif"></p>
+			<font color="#FF00FF">Eddie da Pig</font> gives us the word of the day. Unfortunately, Eddie is not a talking pig so the word of the day is &quot;OINK!&quot;<p><img src="images/eddiedapig.gif"></p>
 			<hr><br>
 		</td>
 	</tr>
@@ -100,7 +100,7 @@
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Wogga Wogga Wogga!!!&nbsp; I haf a pinyins that haf to bee herd!
+			Wogga Wogga Wogga!!! I haf a pinyins that haf to bee herd!
 			<hr><br>
 		</td>
 	</tr>
@@ -154,15 +154,15 @@
 							<img src="./images/cor_l.gif" width=10 height=120><br>
 						</td>
 						<td>
-						    <font size="1">This site is best viewed in 1024x768 resolution or higher.&nbsp; All content on this site is <font color="#008000">my</font> intellectual 
-						    property and may not be used without <font color="#008000">my</font> permission.&nbsp; <font color="#ff0000">CrazyBoy</font> and 
-						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously.&nbsp; No animals or 
-						    aliens were harmed during the making of the site.&nbsp; If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
-						    refund.&nbsp; I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
-						    engaged in the act of blinking.&nbsp; If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
-						    while you are here.&nbsp; You might want to look behind you right now to make sure no one is trying to sneak up on you.&nbsp; Even though snacking during 
-						    your viewing of this site could cause you to become overweight, it will also make you happy.&nbsp; Did you ever notice how clouds sometimes look like 
-						    other things?&nbsp; Okay, I'm done now.<br></font>
+						    <font size="1">This site is best viewed in 1024x768 resolution or higher. All content on this site is <font color="#008000">my</font> intellectual 
+						    property and may not be used without <font color="#008000">my</font> permission. <font color="#ff0000">CrazyBoy</font> and 
+						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously. No animals or 
+						    aliens were harmed during the making of the site. If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
+						    refund. I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
+						    engaged in the act of blinking. If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
+						    while you are here. You might want to look behind you right now to make sure no one is trying to sneak up on you. Even though snacking during 
+						    your viewing of this site could cause you to become overweight, it will also make you happy. Did you ever notice how clouds sometimes look like 
+						    other things? Okay, I'm done now.<br></font>
 			    		</td>
 			    		<td>
 			    			<img src="./images/cor_r.gif" width=10 height=120><br>
