--- a/kmart.html
+++ b/kmart.html
@@ -8,8 +8,8 @@
 		p.black { font-family: 'Arial'; color:black }
 		h1.yellow { font-family: 'Arial'; color:yellow }
 		h2 { font-family: 'Arial'; color:black }
-		h3.1 { font-family: 'Arial'; color:blue; background:white }
-		h3.2 { font-family: 'Arial'; color:red; background:white }
+		h3.a1 { font-family: 'Arial'; color:blue; background:white }
+		h3.a2 { font-family: 'Arial'; color:red; background:white }
 		h6.warn { font-family: Arial; color:red; background:white }
 		td.menu { border-width: thick; border-color:#00ff00; border-style:outset }
 		td.menu { font-family: 'Arial'; font-size:10pt; font-weight:bold; text-align:center; color:yellow; background:black }
@@ -55,43 +55,43 @@
 	
 	<tr>
 		<td colspan="2">
-			<h3 class=1>There is no ad merchandise</h3>
+			<h3 class="a1">There is no ad merchandise</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Don't you just love going to a store that doesn't have anything to sell.&nbsp;&nbsp;We ran out of air conditioners after the first three hours of a three day sale.
+			Don't you just love going to a store that doesn't have anything to sell.We ran out of air conditioners after the first three hours of a three day sale.
 			<hr><br>
 		</td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Rainchecks are stupid</h3>
+			<h3 class="a1">Rainchecks are stupid</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			I went to the store to get buy something, but instead I got a stupid piece of paper.&nbsp; Oh joy! now I can wipe my ass.
+			I went to the store to get buy something, but instead I got a stupid piece of paper. Oh joy! now I can wipe my ass.
 			<hr><br>
 		</td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>The corporate office is run by monkeys</h3>
+			<h3 class="a1">The corporate office is run by monkeys</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Not super-intelligent, genetically engineered monkeys either.&nbsp; No, they are a bunch of drunken, stupid-ass monkeys that get off by throwing shit at each other.
+			Not super-intelligent, genetically engineered monkeys either. No, they are a bunch of drunken, stupid-ass monkeys that get off by throwing shit at each other.
 			<hr><br>
 		</td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Everyday the prices change</h3>
+			<h3 class="a1">Everyday the prices change</h3>
 		</td>
 	</tr>
 	<tr>
@@ -103,7 +103,7 @@
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Somebody stole Layaway Jones</h3>
+			<h3 class="a1">Somebody stole Layaway Jones</h3>
 		</td>
 	</tr>
 	<tr>
@@ -115,23 +115,23 @@
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Fewer than half the air conditioners in the store are working</h3>
+			<h3 class="a1">Fewer than half the air conditioners in the store are working</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			It is the hottest store in West Michigan.&nbsp; When its 85 degrees outside, its 82 degrees inside.&nbsp; That's why I'm trying
-			to start a water gun fight in the store.&nbsp; So if you stop in please bring a loaded squirt gun.<br><br>
-			Update:&nbsp; Air conditioning seems to be working at the moment.&nbsp; Very bizarre.<br><br>
-			Update 2:&nbsp; Only one air conditioner was actually fixed.&nbsp; Not surprising.<br><br>
-			Update 3:&nbsp; Most recent attempt to fix AC appears to have work.&nbsp; AND, this is big so sit down, THE BREAK ROOM HAS AIR CONDITIONING!!!
+			It is the hottest store in West Michigan. When its 85 degrees outside, its 82 degrees inside. That's why I'm trying
+			to start a water gun fight in the store. So if you stop in please bring a loaded squirt gun.<br><br>
+			Update: Air conditioning seems to be working at the moment. Very bizarre.<br><br>
+			Update 2: Only one air conditioner was actually fixed. Not surprising.<br><br>
+			Update 3: Most recent attempt to fix AC appears to have work. AND, this is big so sit down, THE BREAK ROOM HAS AIR CONDITIONING!!!
 			<hr><br>
 		</td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>Martha Stewart</h3>
+			<h3 class="a1">Martha Stewart</h3>
 		</td>
 	</tr>
 	<tr>
@@ -143,22 +143,22 @@
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1><font color="#FF0000">K</font>mart hates America</h3>
+			<h3 class="a1"><font color="#FF0000">K</font>mart hates America</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
 			I had to work eight hours on the Fourth of July because <font color="#FF0000">K</font><font color="#0000FF">mart</font>
-			is open.&nbsp; I also get to work on Labor Day and Memorial Day, because <font color="#FF0000">K</font><font color="#0000FF">mart </font>is open
-			on those days too.&nbsp; Clearly, <font color="#FF0000">K</font><font color="#0000FF">mart</font> hates America.<br><br>
-			Update:&nbsp; I somehow got out of working on Memorial Day, but Kmart was still open, so I stand by my statement:&nbsp; Kmart Hates America.
+			is open. I also get to work on Labor Day and Memorial Day, because <font color="#FF0000">K</font><font color="#0000FF">mart </font>is open
+			on those days too. Clearly, <font color="#FF0000">K</font><font color="#0000FF">mart</font> hates America.<br><br>
+			Update: I somehow got out of working on Memorial Day, but Kmart was still open, so I stand by my statement: Kmart Hates America.
 			<hr><br>
 		</td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>A good number of customers are dumb as bricks</h3>
+			<h3 class="a1">A good number of customers are dumb as bricks</h3>
 		</td>
 	</tr>
 	<tr>
@@ -166,13 +166,13 @@
 		<td>
 			Lets establish some good rules to make things easier for all of us:
 			<ol>
-				<li>If your car has a working alarm, you should not be shopping at <font color="#FF0000">K</font><font color="#0000FF">mart</font>.&nbsp; You can afford better.</li>
-				<li>You are not the center of the universe.&nbsp; If you want me to help you, wait until I'm finished helping the customer I am with.</li>
-				<li>If you aren't going to listen to what I have to say, then please don't ask me any questions.&nbsp; If I say there are none in the back, don't expect me to go look just to make you feel better.&nbsp; I just checked ten minutes ago for the last person who asked for the same thing.</li>
-				<li>The bathroom has NEVER moved.&nbsp; Do you understand the amount of work that would be involved in moving plumbing around a building?&nbsp; We don't have that kind of money.&nbsp; Feel free to check the same corner of the store the bathroom has always been in before asking where it is.</li>
-				<li>Everyone gets the same ad as you.&nbsp; Just because I don't have a product in stock when you get to the store doesn't necessarily mean I didn't have any.&nbsp; I have a hard time feeling sorry for someone who waits until an hour before we close on Saturday to come in looking for ad merchandise.</li>
-				<li>The ad is printed nationally and most ordering is controlled above the store level.&nbsp; As a store we have no control over what is in the ad and little control over how much ad merchandise we have on hand.&nbsp; Is it stupid?&nbsp; Yes, its the <font color="#FF0000">K</font><font color="#0000FF">mart</font> way.&nbsp; Get over it.</li>
-				<li>If you're going to buy patio furniture, please drive a truck to the store.&nbsp; Not an SUV, not a minivan, A TRUCK.&nbsp; Patio furniture comes in big boxes.</li>
+				<li>If your car has a working alarm, you should not be shopping at <font color="#FF0000">K</font><font color="#0000FF">mart</font>. You can afford better.</li>
+				<li>You are not the center of the universe. If you want me to help you, wait until I'm finished helping the customer I am with.</li>
+				<li>If you aren't going to listen to what I have to say, then please don't ask me any questions. If I say there are none in the back, don't expect me to go look just to make you feel better. I just checked ten minutes ago for the last person who asked for the same thing.</li>
+				<li>The bathroom has NEVER moved. Do you understand the amount of work that would be involved in moving plumbing around a building? We don't have that kind of money. Feel free to check the same corner of the store the bathroom has always been in before asking where it is.</li>
+				<li>Everyone gets the same ad as you. Just because I don't have a product in stock when you get to the store doesn't necessarily mean I didn't have any. I have a hard time feeling sorry for someone who waits until an hour before we close on Saturday to come in looking for ad merchandise.</li>
+				<li>The ad is printed nationally and most ordering is controlled above the store level. As a store we have no control over what is in the ad and little control over how much ad merchandise we have on hand. Is it stupid? Yes, its the <font color="#FF0000">K</font><font color="#0000FF">mart</font> way. Get over it.</li>
+				<li>If you're going to buy patio furniture, please drive a truck to the store. Not an SUV, not a minivan, A TRUCK. Patio furniture comes in big boxes.</li>
 				<li>If I'm in the store and I'm wearing a red vest and a name tag don't ask me if I work at the store unless you expect a smart-ass answer.</li>
 			</ol>
 			<hr><br>
@@ -180,7 +180,7 @@
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>I work at <font color="#FF0000">K</font>mart</h3>
+			<h3 class="a1">I work at <font color="#FF0000">K</font>mart</h3>
 		</td>
 	</tr>
 	<tr>
@@ -193,13 +193,13 @@
 	</tr>
 	<tr>
 		<td colspan="2">
-			<h3 class=1>My <font color="#FF0000">K</font><font color="#0000FF">mart</font> pictures</h3>
+			<h3 class="a1">My <font color="#FF0000">K</font><font color="#0000FF">mart</font> pictures</h3>
 		</td>
 	</tr>
 	<tr>
 		<td width="5%"></td>
 		<td>
-			Not technically a complaint.&nbsp; <a href="kmart-pics.html">Click to see.</a>
+			Not technically a complaint. <a href="kmart-pics.html">Click to see.</a>
 			<hr><br>
 		</td>
 	</tr>
@@ -226,15 +226,15 @@
 							<img src="./images/cor_l.gif" width=10 height=120><br>
 						</td>
 						<td>
-						    <font size="1">This site is best viewed in 1024x768 resolution or higher.&nbsp; All content on this site is <font color="#008000">my</font> intellectual 
-						    property and may not be used without <font color="#008000">my</font> permission.&nbsp; <font color="#ff0000">CrazyBoy</font> and 
-						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously.&nbsp; No animals or 
-						    aliens were harmed during the making of the site.&nbsp; If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
-						    refund.&nbsp; I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
-						    engaged in the act of blinking.&nbsp; If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
-						    while you are here.&nbsp; You might want to look behind you right now to make sure no one is trying to sneak up on you.&nbsp; Even though snacking during 
-						    your viewing of this site could cause you to become overweight, it will also make you happy.&nbsp; Did you ever notice how clouds sometimes look like 
-						    other things?&nbsp; Okay, I'm done now.<br></font>
+						    <font size="1">This site is best viewed in 1024x768 resolution or higher. All content on this site is <font color="#008000">my</font> intellectual 
+						    property and may not be used without <font color="#008000">my</font> permission. <font color="#ff0000">CrazyBoy</font> and 
+						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously. No animals or 
+						    aliens were harmed during the making of the site. If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
+						    refund. I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
+						    engaged in the act of blinking. If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
+						    while you are here. You might want to look behind you right now to make sure no one is trying to sneak up on you. Even though snacking during 
+						    your viewing of this site could cause you to become overweight, it will also make you happy. Did you ever notice how clouds sometimes look like 
+						    other things? Okay, I'm done now.<br></font>
 			    		</td>
 			    		<td>
 			    			<img src="./images/cor_r.gif" width=10 height=120><br>
