--- a/ninjah-fantasy.html
+++ b/ninjah-fantasy.html
@@ -8,8 +8,8 @@
 		p.black { font-family: 'Arial'; color:black }
 		h1.yellow { font-family: 'Arial'; color:yellow }
 		h2 { font-family: 'Arial'; color:black }
-		h3.1 { font-family: 'Arial'; color:blue; background:white }
-		h3.2 { font-family: 'Arial'; color:red; background:white }
+		h3.a1 { font-family: 'Arial'; color:blue; background:white }
+		h3.a2 { font-family: 'Arial'; color:red; background:white }
 		h6.warn { font-family: Arial; color:red; background:white }
 		td.menu { border-width: thick; border-color:#00ff00; border-style:outset }
 		td.menu { font-family: 'Arial'; font-size:10pt; font-weight:bold; text-align:center; color:yellow; background:black }
@@ -47,10 +47,10 @@
 <p><h2>Nin-Jah Fantasy</h2></p>
 <p>&nbsp;</p>
 <p>In the future of a long time ago (i.e. right now) there is 
-a gang of Nin-Jah traveling the country in search of something.&nbsp; And then they 
+a gang of Nin-Jah traveling the country in search of something. And then they 
 found something, but discovered it was not what they were looking for, so they 
-put it back and continued their search.&nbsp; Suddenly they found what they were 
-looking for, but one of them dropped it and it broke.&nbsp; So now, their search 
+put it back and continued their search. Suddenly they found what they were 
+looking for, but one of them dropped it and it broke. So now, their search 
 continues.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -62,41 +62,41 @@ continues.</p>
 <p>&nbsp;</p>
 <p>SHIN grabs WANG and throws him to the ground.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">SHIN:&nbsp; What the hell is your 
+<p class="MsoNormal" style="text-indent: .5in">SHIN: What the hell is your 
 problem, WANG?</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">WANG:&nbsp; I thought I saw something.</p>
+<p class="MsoNormal" style="text-indent: .5in">WANG: I thought I saw something.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">SHIN:&nbsp; There's nothing here but 
+<p class="MsoNormal" style="text-indent: .5in">SHIN: There's nothing here but 
 your shadow.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">WANG:&nbsp; …I have a really scary 
-shadow…</p>
+<p class="MsoNormal" style="text-indent: .5in">WANG: ...I have a really scary 
+shadow...</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">SHIN:&nbsp; Keep moving and shut up.</p>
+<p class="MsoNormal" style="text-indent: .5in">SHIN: Keep moving and shut up.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p><u>CART-FU SCENE</u></p>
 <p>&nbsp;</p>
 <p>Ext. Shopping Mart Night</p>
 <p>&nbsp;</p>
-<p>NEE and TOE are walking through a parking lot.&nbsp; NEE is pushing a shopping cart.</p>
+<p>NEE and TOE are walking through a parking lot. NEE is pushing a shopping cart.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">NEE:&nbsp; I know Cart-fu.</p>
+<p class="MsoNormal" style="text-indent: .5in">NEE: I know Cart-fu.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">TOE:&nbsp; You're an idiot.</p>
+<p class="MsoNormal" style="text-indent: .5in">TOE: You're an idiot.</p>
 <p>&nbsp;</p>
 <p>NEE slams the cart into TOE.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">TOE:&nbsp; Damn it, NEE, you hit me.</p>
+<p class="MsoNormal" style="text-indent: .5in">TOE: Damn it, NEE, you hit me.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">NEE:&nbsp; Hit you with a <i>CART</i>!</p>
+<p class="MsoNormal" style="text-indent: .5in">NEE: Hit you with a <i>CART</i>!</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">TOE:&nbsp; That's it!&nbsp; Let's go!</p>
+<p class="MsoNormal" style="text-indent: .5in">TOE: That's it! Let's go!</p>
 <p>&nbsp;</p>
-<p>NEE and TOE start fighting as the camera pans away.&nbsp; When the camera pans back, TOE is wrapped into and around the cart, once again being pushed by NEE.</p>
+<p>NEE and TOE start fighting as the camera pans away. When the camera pans back, TOE is wrapped into and around the cart, once again being pushed by NEE.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">NEE:&nbsp; Bitch.</p>
+<p class="MsoNormal" style="text-indent: .5in">NEE: Bitch.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p><u>NIN-JAH DANCE SCENE</u></p>
@@ -108,19 +108,19 @@ shadow…</p>
 <p>&nbsp;</p>
 <p>Int. Store</p>
 <p>&nbsp;</p>
-<p>A cell phone rings in a most annoying and comical tone.&nbsp; TOE pulls the phone out of his pocket and beings conversing with the person on 
+<p>A cell phone rings in a most annoying and comical tone. TOE pulls the phone out of his pocket and beings conversing with the person on 
 the other end.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">TOE:&nbsp; Hello… Hi, Mom… No, Mom, I can't bring home milk, I'm with the guys and we're looking for the thing…Yeah, I 
-know I told you we found it, but Wang dropped it and now we're trying to find another one… Yes, we're going to make him pay to replace it, but he needs help 
-finding it… Sorry, I have to go, the guys are threatening to smash my phone…I love you too, Mom. Bye.</p>
+<p class="MsoNormal" style="text-indent: .5in">TOE: Hello... Hi, Mom... No, Mom, I can't bring home milk, I'm with the guys and we're looking for the thing...Yeah, I 
+know I told you we found it, but Wang dropped it and now we're trying to find another one... Yes, we're going to make him pay to replace it, but he needs help 
+finding it... Sorry, I have to go, the guys are threatening to smash my phone...I love you too, Mom. Bye.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p><u>DO YOU WORK HERE?&nbsp; RUNNING GAG</u></p>
+<p><u>DO YOU WORK HERE? RUNNING GAG</u></p>
 <p>&nbsp;</p>
 <p>Int. Store</p>
 <p>&nbsp;</p>
-<p>One of the Nin-Jah will have a red vest as part of his outfit.&nbsp; He will be asked at every store if he works there.&nbsp; His response will 
+<p>One of the Nin-Jah will have a red vest as part of his outfit. He will be asked at every store if he works there. His response will 
 be punching the person out.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -130,9 +130,9 @@ be punching the person out.</p>
 <p>&nbsp;</p>
 <p>The four Nin-Jah are standing in an aisle as they decide the item Wang is holding is not what they are looking for.</p>
 <p>&nbsp;</p>
-<p class="MsoNormal" style="text-indent: .5in">SHIN:&nbsp; Alright, Wang, put it back on the shelf, throw a smoke bomb, and let's get out of here.</p>
+<p class="MsoNormal" style="text-indent: .5in">SHIN: Alright, Wang, put it back on the shelf, throw a smoke bomb, and let's get out of here.</p>
 <p>&nbsp;</p>
-<p>Wang throws the item smashing into the ground as he puts the smoke bomb on the shelf.&nbsp; Suddenly the Nin-Jah are gone.</p>
+<p>Wang throws the item smashing into the ground as he puts the smoke bomb on the shelf. Suddenly the Nin-Jah are gone.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 </td></tr></table>
@@ -158,15 +158,15 @@ be punching the person out.</p>
 							<img src="./images/cor_l.gif" width=10 height=120><br>
 						</td>
 						<td>
-						    <font size="1">This site is best viewed in 1024x768 resolution or higher.&nbsp; All content on this site is <font color="#008000">my</font> intellectual 
-						    property and may not be used without <font color="#008000">my</font> permission.&nbsp; <font color="#ff0000">CrazyBoy</font> and 
-						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously.&nbsp; No animals or 
-						    aliens were harmed during the making of the site.&nbsp; If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
-						    refund.&nbsp; I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
-						    engaged in the act of blinking.&nbsp; If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
-						    while you are here.&nbsp; You might want to look behind you right now to make sure no one is trying to sneak up on you.&nbsp; Even though snacking during 
-						    your viewing of this site could cause you to become overweight, it will also make you happy.&nbsp; Did you ever notice how clouds sometimes look like 
-						    other things?&nbsp; Okay, I'm done now.<br></font>
+						    <font size="1">This site is best viewed in 1024x768 resolution or higher. All content on this site is <font color="#008000">my</font> intellectual 
+						    property and may not be used without <font color="#008000">my</font> permission. <font color="#ff0000">CrazyBoy</font> and 
+						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously. No animals or 
+						    aliens were harmed during the making of the site. If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
+						    refund. I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
+						    engaged in the act of blinking. If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
+						    while you are here. You might want to look behind you right now to make sure no one is trying to sneak up on you. Even though snacking during 
+						    your viewing of this site could cause you to become overweight, it will also make you happy. Did you ever notice how clouds sometimes look like 
+						    other things? Okay, I'm done now.<br></font>
 			    		</td>
 			    		<td>
 			    			<img src="./images/cor_r.gif" width=10 height=120><br>
