--- a/ode-to-my-pop.html
+++ b/ode-to-my-pop.html
@@ -2,28 +2,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Turtle Interactive Software</title>
-	<style type="text/css">
-		body { font-family: 'Arial'; background:#00CC00; color:#000000; margin:0 }
-		p.green { font-family: 'Arial'; color:green; background:white }
-		p.black { font-family: 'Arial'; color:black }
-		h1.yellow { font-family: 'Arial'; color:yellow }
-		h2 { font-family: 'Arial'; color:black }
-		h3.a1 { font-family: 'Arial'; color:blue; background:white }
-		h3.a2 { font-family: 'Arial'; color:red; background:white }
-		h6.warn { font-family: Arial; color:red; background:white }
-		td.menu { border-width: thick; border-color:#00ff00; border-style:outset }
-		td.menu { font-family: 'Arial'; font-size:10pt; font-weight:bold; text-align:center; color:yellow; background:black }
-		td.nobrd { border-style:none }
-		A.menu:link { color: yellow; background:#000000 }
-		A.menu:visited { color: white; background:#000000 }
-		A.menu:hover { color: green; background:#000000 }
-		A.menu:active { color: lime; background:#000000 }
-	</style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<script type='text/javascript'>
-		function Go(){return}
-	</script>
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
