Move header and footer to a js file

--- a/pitures.html
+++ b/pitures.html
@@ -8,18 +8,7 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table width=997 tableborder=5 bordercolor=#000000 bgcolor=#00CC00 align=center cellpadding=0 cellspacing=0>
-		<tr>
-			<td height=128 width=128>
-				<img src="./images/turtleisdot.jpg"><br>
-			</td>
-			<td height=128 width=741>
-				<img src="./images/tisbanner1.jpg"><br>
-			</td>
-			<td height=128 width=128>
-				<img src="./images/turtleisdot.jpg"><br>
-			</td>
-		</tr>
+	<table id="body-table" width=997 tableborder=5 bordercolor=#000000 bgcolor=#00CC00 align=center cellpadding=0 cellspacing=0>
 		<tr>
 			<td colspan=3>
 
@@ -89,53 +78,7 @@
 </div>
 			</td>
 		</tr>
-	 	<tr>
-	    	<td valign="top" colspan=3 bgcolor=#FFFFFF>
-				<table cellpadding=0 cellspacing=0>
-					<tr>
-						<td>
-							<img src="./images/cor_tl.gif" width=10 height=10><br>
-						</td>
-						<td>
-							<img src="./images/cor_t.gif" width=977 height=10><br>
-						</td>
-						<td>
-							<img src="./images/cor_tr.gif" width=10 height=10><br>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<img src="./images/cor_l.gif" width=10 height=120><br>
-						</td>
-						<td>
-						    <font size="1">This site is best viewed in 1024x768 resolution or higher. All content on this site is <font color="#008000">my</font> intellectual 
-						    property and may not be used without <font color="#008000">my</font> permission. <font color="#ff0000">CrazyBoy</font> and 
-						    <font color="#ff00ff">Eddie da Pig</font> are merely figments of my imagination, please do not take anything they type seriously. No animals or 
-						    aliens were harmed during the making of the site. If you would like to stop seeing this site feel free to close your eyes, just don't expect a 
-						    refund. I can't be held responsible for anything you see when you blink, even if you were looking at my site immediately before and after you 
-						    engaged in the act of blinking. If you usually wear a clown nose, your enjoyment of this site will be significantly enhanced if you take it off 
-						    while you are here. You might want to look behind you right now to make sure no one is trying to sneak up on you. Even though snacking during 
-						    your viewing of this site could cause you to become overweight, it will also make you happy. Did you ever notice how clouds sometimes look like 
-						    other things? Okay, I'm done now.<br></font>
-			    		</td>
-			    		<td>
-			    			<img src="./images/cor_r.gif" width=10 height=120><br>
-			    		</td>
-			    	</tr>
-			    	<tr>
-			    		<td>
-			    			<img src="./images/cor_bl.gif" width=10 height=10><br>
-			    		</td>
-			    		<td>
-			    			<img src="./images/cor_b.gif" width=977 height=10><br>
-			    		</td>
-			    		<td>
-			    			<img src="./images/cor_br.gif" width=10 height=10><br>
-			    		</td>
-			    	</tr>
-			    </table>
-			</td>
-		</tr>
 	</table>
+	<script type='text/javascript' src='header_footer.js'></script>
 </body>
 </html>
