--- a/movies.html
+++ b/movies.html
@@ -8,7 +8,7 @@
 	<script type='text/javascript' src='menu_var.js'></script>
 	<script type='text/javascript' src='menu_com.js'></script>
 	<noscript>Your browser does not support scripts, so you can not see the menu.</noscript>
-	<table id="body-table" width=997 tableborder=5 bordercolor=#000000 bgcolor=#00CC00 align=center cellpadding=0 cellspacing=0>
+	<table id="body-table" cellpadding=0 cellspacing=0>
 		<tr>
 			<td colspan=3>
 
