Update fonts and colors, header, add blog and comics to menu

--- a/colors.html
+++ b/colors.html
@@ -16,12 +16,12 @@
 <table bgcolor=#FFFFFF width=100%>
 	<tr>
 		<td colspan=5>
-			<h2>Colored Drawlings</h2>
+			<h2>Colored Drawings</h2>
 		</td>
 	</tr>
 	<tr>
 		<td colspan=5>
-			<h3>These are various drawlings I've colored on the puter. (Drawlings are clickable and lead to a larger version.)</h3>
+			<h3>These are various drawings I've colored on the puter. (Drawings are clickable and lead to a larger version.)</h3>
 		</td>
 	</tr>
 </table>
