--- a/kmart-pics.html
+++ b/kmart-pics.html
@@ -17,7 +17,7 @@
 	<tr>
 		<td>
 			<h2><font color="#FF0000">K</font>mart Pictures</h2>
-			<h3>These are pitures I took at </font><font color="#FF0000">K</font><font color="#0000FF">mart</font>. More should be coming eventually.</h3>
+			<h3>These are pictures I took at </font><font color="#FF0000">K</font><font color="#0000FF">mart</font>. More should be coming eventually.</h3>
 			<p><img src="images/kout1.jpg"></p>
 			<p>My store on a sunny Sunday.</p>
 			<p><img src="images/bluelight1.jpg"></p>
