--- a/updates.html
+++ b/updates.html
@@ -44,13 +44,20 @@
 <table bgcolor=#FFFFFF cellpadding=5 cellspacing=5 width=995>
 
 	
+  <tr>
+    <td colspan=2><hr><h3 class="a1">Me - 5/12/25 - 6:26 pm</h3></td>
+  </tr>
+  <tr>
+    <td><img src="images/claythumb01.jpg"><p><br></p></td>
+    <td>Twenty-one years later... I stopped paying for the site and moved it to Github pages and now it's easier to update so I keep messing with it. Updated the header and the colors and added more links to the menus. There will be more updates because I know a lot more than I did a long time ago.</td>
+  </tr>
 
   <tr>
     <td colspan=2><hr><h3 class="a1">Me - 5/26/04 - 9:55 pm</h3></td>
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>Added a page with some <a href="colors.html">colored drawlings</a> to the site.  I demand that you check them out immediately!</td>
+    <td>Added a page with some <a href="colors.html">colored drawings</a> to the site.  I demand that you check them out immediately!</td>
   </tr>
 
 			
@@ -150,7 +157,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>Added a second <font color="#0000FF"><a href="drawlings.html">piture</a></font> page of drawlings and a page of <a href="comics.html">comics</a> I've recently scanned. Added my newly acquired DVDs to the <a href="my-dvds.html">list</a>.</td>
+    <td>Added a second <font color="#0000FF"><a href="drawings.html">piture</a></font> page of drawings and a page of <a href="comics.html">comics</a> I've recently scanned. Added my newly acquired DVDs to the <a href="my-dvds.html">list</a>.</td>
   </tr>
 
 			
@@ -160,7 +167,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>So many updates. I reworked the <a href="pitures.html">piture page</a>, added some stuff to it. Added information on two other movies I'm &quot;working on&quot; in the <a href="movies.html">movie page</a>, including the current version of &quot;<a href="ninjah-fantasy.html">Nin-Jah Fantasy</a>&quot; the screen play. There's a bunch of other little things that I've fixed that don't necessitate mentioning.</td>
+    <td>So many updates. I reworked the <a href="pictures.html">piture page</a>, added some stuff to it. Added information on two other movies I'm &quot;working on&quot; in the <a href="movies.html">movie page</a>, including the current version of &quot;<a href="ninjah-fantasy.html">Nin-Jah Fantasy</a>&quot; the screen play. There's a bunch of other little things that I've fixed that don't necessitate mentioning.</td>
   </tr>
 
 			
@@ -170,7 +177,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>My digi-camera sucks. I've determined that so long as I only take small pitures with it, the thing won't reboot my computer. Anyway, I have a piture of my kitties on the bottom of the <a href="pitures.html">piture page</a>. Some random stuff on the <a href="kmart.html">Kmart page</a> has been updated. We're getting new registers and three price check stations are being install in 2-3 weeks. I may have to quit. This just isn't the Kmart I've grown to hate. All four of my main characters for my game are now appearing on the <a href="game.html">Game Progress</a> page.</td>
+    <td>My digi-camera sucks. I've determined that so long as I only take small pictures with it, the thing won't reboot my computer. Anyway, I have a piture of my kitties on the bottom of the <a href="pictures.html">piture page</a>. Some random stuff on the <a href="kmart.html">Kmart page</a> has been updated. We're getting new registers and three price check stations are being install in 2-3 weeks. I may have to quit. This just isn't the Kmart I've grown to hate. All four of my main characters for my game are now appearing on the <a href="game.html">Game Progress</a> page.</td>
   </tr>
 
 			
@@ -190,7 +197,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>Added bunches more photos to the <a href="pitures.html">pitures</a> page. Put Mr. Alien But animation up above. <a href="ramblings.html">Rambled</a> about Austin Powers and darkness. Added avatars to the update posts.</td>
+    <td>Added bunches more photos to the <a href="pictures.html">pictures</a> page. Put Mr. Alien But animation up above. <a href="ramblings.html">Rambled</a> about Austin Powers and darkness. Added avatars to the update posts.</td>
   </tr>
 
 			
@@ -200,7 +207,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>CrazyBoy has his first <a href="pitures.html">piture</a> up.</td>
+    <td>CrazyBoy has his first <a href="pictures.html">picture</a> up.</td>
   </tr>
 
 			
@@ -260,7 +267,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>More <a href="kmart-pics.html">pitures at Kmart</a>, nothing very special. Just wasting server space. Also took a <a href="pitures.html">piture</a> with the camera out the window while driving down the road at 55mph because I'm dumb.</td>
+    <td>More <a href="kmart-pics.html">pictures at Kmart</a>, nothing very special. Just wasting server space. Also took a <a href="pictures.html">piture</a> with the camera out the window while driving down the road at 55mph because I'm dumb.</td>
   </tr>
 
 			
@@ -270,7 +277,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>I took more <a href="kmart-pics.html">pitures at Kmart</a> and successfully got them uploaded. CrazyBoy thought the camera was food and accidentally deleted the ones I took yesterday when he was gnawing on the it. He was supposed to post a public apology for destroying the pitures, but that doesn't look much like he is too sorry. I would like to apologize to Nick, whose piture of him with a box on his head was lost in the tragedy.</td>
+    <td>I took more <a href="kmart-pics.html">pictures at Kmart</a> and successfully got them uploaded. CrazyBoy thought the camera was food and accidentally deleted the ones I took yesterday when he was gnawing on the it. He was supposed to post a public apology for destroying the pictures, but that doesn't look much like he is too sorry. I would like to apologize to Nick, whose piture of him with a box on his head was lost in the tragedy.</td>
   </tr>
 
 			
@@ -290,7 +297,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>Bunch of new <a href="pitures.html">pitures</a> up, including the first photo of me on the site. Another <a href="kmart.html">complaint about Kmart</a>, amazing how I keep coming up with these things.</td>
+    <td>Bunch of new <a href="pictures.html">pictures</a> up, including the first photo of me on the site. Another <a href="kmart.html">complaint about Kmart</a>, amazing how I keep coming up with these things.</td>
   </tr>
 
 			
@@ -330,7 +337,7 @@
   </tr>
   <tr>
     <td><img src="images/claythumb01.jpg"><p><br></p></td>
-    <td>More pitures up. I have to remember to take some photos. My digital camera is from <font color="#FF0000">K</font><font color="#0000FF">mart</font> so it don't work so good most of the time. It eats batteries like <span style="background-color: #800000"><font color="#FFFFFF">M&amp;Ms</font></span> and I can only get a few shots off before it dies. It also forces my computer to reboot half the time when I try to transfer pictures so I don't know if I can get any shots up anytime soon. I got a page of <a href="brilliant-ideas.html">brilliant ideas</a> I think I thought of now online. I'm much better at coming up with good ideas than I am at implementing them so if you can make any of them actually work, feel free to do so. Especially if you make the brownies and they turn out good, please email me one or two. Should be more brilliant ideas coming soon, that was just all I could think of at the moment. And yes, I do know the secret to life, I'm just not in the mood to share it right now.</td>
+    <td>More pictures up. I have to remember to take some photos. My digital camera is from <font color="#FF0000">K</font><font color="#0000FF">mart</font> so it don't work so good most of the time. It eats batteries like <span style="background-color: #800000"><font color="#FFFFFF">M&amp;Ms</font></span> and I can only get a few shots off before it dies. It also forces my computer to reboot half the time when I try to transfer pictures so I don't know if I can get any shots up anytime soon. I got a page of <a href="brilliant-ideas.html">brilliant ideas</a> I think I thought of now online. I'm much better at coming up with good ideas than I am at implementing them so if you can make any of them actually work, feel free to do so. Especially if you make the brownies and they turn out good, please email me one or two. Should be more brilliant ideas coming soon, that was just all I could think of at the moment. And yes, I do know the secret to life, I'm just not in the mood to share it right now.</td>
   </tr>
 
 			
